# DayIncreaseBotTgCpp

./: .gitignore  CMakeLists.txt  DayIncreaseBotTgCpp.sln  README.md
DayIncreaseBotTgCpp/: BotManager.cpp  BotManager.h  CMakeLists.txt  DayIncreaseBotTgCpp.cpp  DayIncreaseBotTgCpp.sln  DayIncreaseBotTgCpp.vcxproj  Dockerfile  LocationService.cpp  LocationService.h  MessageHandler.cpp  MessageHandler.h  SolsticeData.cpp  SolsticeData.h  UpdateScheduler.cpp  UpdateScheduler.h  WeatherApiClient.cpp  WeatherApiClient.h  WeatherApiManager.cpp  WeatherApiManager.h  WeatherDataParser.cpp  WeatherDataParser.h  packages.config  settings.json
